<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.Login">


    <ImageView
        android:id="@+id/login_img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/img_logo_simple"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/login_img_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="@drawable/edittext_round"
            android:hint="@string/login_email"
            android:gravity="center"
            android:textSize="14dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="@drawable/edittext_round"
            android:gravity="center"
            android:hint="@string/login_password"
            android:textSize="14dp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_register"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_signin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:text="@string/login_dologin" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        />
</RelativeLayout>